# yourtube

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.env/: .env.dev
.github/workflows/: cd.yaml  ci.yaml
data/: channels.csv  data.csv
data/tables/: .~lock.videos.csv#  base.sql  categ_1.csv  categ_2.csv  channels copy 2.csv  channels.csv  language.csv  languages.csv  status.csv  users.csv  userschannels.csv  usersvideos.csv  videos.csv
notebooks/: 00-extract.ipynb  01-feeds.ipynb  02-check.ipynb  extract.ipynb
sandbox/: connectors.py
src/: __init__.py  api.py  db.py  extracts.py  feeds.py  helpers.py  imports.py  logger.py  models.py  params.py  paths.py
src/base/: models.py
src/categ_1/: models.py  routers.py
src/categ_2/: models.py  routers.py
src/channels/: helpers.py  models.py  queries.py  routers.py  validators.py
src/core/: extracts.py  feeds.py  helpers.py  paths.py  thumbnails.py
src/helpers/: helpers.py  queries.py  routers.py
src/home/: functions.py  helpers.py  routers.py
src/languages/: models.py  routers.py
src/models/: categ_1.py  categ_2.py  channels.py  db.py  languages.py  status.py  users.py  userschannels.py  videos.py
src/queries/: __init__.py  videos.py
src/routers/: __init__.py  categ_1.py  categ_2.py  channels.py  helpers.py  home.py  languages.py  status.py  videos.py
src/status/: models.py  routers.py
src/users/: models.py  queries.py  routers.py
src/userschannels/: models.py
src/usersqueries/: models.py
src/usersvideos/: models.py
src/validators/: __init__.py  channels.py  videos.py
src/videos/: functions.py  models.py  queries.py  routers.py  validators.py
tests/: test_models.py
tests/deprecated/: env.py
utils/: cd.yaml  ci.yaml  commit_deploy.sh  deprecated.txt  docker.sh  dummy.py  perform.sh  ping_prod_api.sh
(+34 files in other folders)
