[tool.poetry]
name = "yourtube"
version = "0.1.0"
description = "like youtube but better"
authors = ["AlexGazagnes"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
sqlalchemy = "^2.0.23"
pytest = "^7.4.3"
mypy = "^1.7.0"
coverage = "^7.3.2"
requests = "^2.31.0"
selenium = "^4.15.2"
beautifulsoup4="^4.12.2"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupytext = "^1.15.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
gcloud = "^0.18.3"
pylint = "^3.0.2"
pep8 = "^1.7.1"
ipywidgets = "^8.1.1"
flake8 = "^6.1.0"
jupyterlab = "^4.0.9"
jupyter-contrib-nbextensions = "^0.7.0"
nbconvert = "^7.11.0"
pandas = "^2.1.3"
pandarallel = "^1.6.5"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
