[tool.poetry]
name = "yourtube"
version = "0.2.0"
description = "like youtube but better"
authors = ["AlexGazagnes"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
beautifulsoup4="^4.12.2"
lxml = "^4.9.3"
feedparser = "^6.0.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
pyscopg2 = "^66.0.2"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
black = {extras = ["jupyter"], version = "^23.11.0"}
pylint = "^3.0.2"
mypy = "^1.7.0"
coverage = "^7.3.2"
pep8 = "^1.7.1"
flake8 = "^6.1.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.9"
jupytext = "^1.15.2"
ipywidgets = "^8.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
nbconvert = "^7.11.0"
pandas = "^2.1.3"
pandarallel = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
